fix(material/chips): remove visible overflow for labels

--- a/src/material/core/focus-indicators/_private.scss
+++ b/src/material/core/focus-indicators/_private.scss
@@ -86,6 +86,8 @@ $default-border-radius: 4px;
   $config: map.merge($default-config, $config);
 
   @include _customize-focus-indicators($config);
+
+  @include _chip-label-overflow-visible();
 }
 
 @mixin strong-focus-indicators-color($theme-or-color) {
@@ -106,5 +108,15 @@ $default-border-radius: 4px;
     @if inspection.theme-has($theme-or-color, color) {
       @include strong-focus-indicators-color($theme-or-color);
     }
+  }
+}
+
+@mixin _chip-label-overflow-visible {
+  // MDC sets `overflow: hidden` on these elements in order to truncate the text. This conflicts
+  // with how we structure and style the strong focus indicators so we need to override it.
+  .mdc-evolution-chip__cell--primary,
+  .mdc-evolution-chip__action--primary,
+  .mat-mdc-chip-action-label {
+    overflow: visible;
   }
 }
